Fix active link height to align when viewing on tablet devices

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -80,3 +80,4 @@ $blockquote-border-color       : $light-gray;
 
 $global-transition-speed       : .3s;
 $terminal-window-height        : 30px;
+$nav-links-padding             : 17px 30px 17px 0;
