--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -8,18 +8,15 @@
   }
 }
 
-.site-name {
-  cursor: pointer;
-  font-size: 15px;
-  letter-spacing: .5px;
-  margin: 0;
+.nav-image {
+  float: left;
+  padding: 14px 10px;
 }
 
 .avatar {
-  border-radius: 100%;
+  border-radius: 50%;
   float: left;
   height: 26px;
-  padding: 14px 10px;
   width: 26px;
 }
 
